# realtime-audio-processor

./: .gitignore  CMakeLists.txt  README.md  TODO
documentation/: DFD.xopp  analysis.tex  audio io flowchart.odg  audio_effects.gaphor  design.tex  development.tex  document.tex  effects flowcharts.odg  evaluation.tex  full_source.tex  generate_source_files_appendix.py  gui flow.odg  gui wireframes.odg  hierarchy.odg  objectives.md  questionnare_responses.tex  testing.tex  uml_audio_io.gaphor
include/: app.h  atomic_linked_list.h  audio.h  audio_file.h  audio_stream.h  audio_visualiser.h  custom_events.h  fft.h  file_browser.h  linked_list.h  main_window.h  play_bar.h  play_window.h  playlist.h  playlist_window.h  presets.h  start_window.h  tree.h
include/data/: atomic_linked_list.h  files.h  merge_sort.h  tree.h
include/effects/: audio_effect.h  bass_effect.h  echo_effect.h  effects_list.h  equaliser_effect.h  fft.h  floating_point_property.h  fourier_effect.h  integer_property.h  noise_effect.h  pitch_effect.h  property.h  volume_effect.h
include/io/: audio_file.h  audio_stream.h  playlist.h
include/ui/: audio_visualiser.h  effects_window.h  file_browser.h  play_window.h  playlist_window.h  popup_window.h  properties_window.h  song_window.h
src/: app.cpp  audio_file.cpp  audio_stream.cpp  audio_visualiser.cpp  custom_events.cpp  fft.cpp  file_browser.cpp  main.cpp  main_window.cpp  play_bar.cpp  play_window.cpp  playlist.cpp  playlist_window.cpp  presets.cpp  start_window.cpp
src/data/: merge_sort.cpp
src/effects/: bass_effect.cpp  echo_effect.cpp  equaliser_effect.cpp  fft.cpp  fourier_effect.cpp  noise_effect.cpp  pitch_effect.cpp  volume_effect.cpp
src/io/: audio_file.cpp  audio_stream.cpp  playlist.cpp
src/ui/: audio_visualiser.cpp  custom_events.cpp  effects_window.cpp  file_browser.cpp  play_window.cpp  playlist_window.cpp  properties_window.cpp  song_window.cpp  start_window.cpp
unit_tests/: build.sh  complex.cpp  phase.cpp  properties.cpp  scale.cpp  shuffle.cpp
